Fix subpixel black bar at bottom of GIF container on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -1062,6 +1062,7 @@ a.footer-item:hover {
   width: 180px;
   height: auto;
   border-radius: inherit;
+  margin-bottom: -1px;
 }
 
 
